Finished the team editor menu