@@ -41,6 +41,7 @@ import org.bukkit.util.Vector;
 
 import javax.annotation.Nullable;
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class BingoGame implements GamePhase
 {
@@ -115,7 +116,7 @@ public class BingoGame implements GamePhase
         {
             cards.add(activeTeam.card);
         }
-        cardEventManager.setCards(cards.stream().toList());
+        cardEventManager.setCards(cards.stream().collect(Collectors.toList()));
 
         if (statTracker != null)
             statTracker.start(getTeamManager().getActiveTeams());
