@@ -126,8 +126,8 @@ public class TaskPickerMenu extends PaginatedSelectionMenu
 
         BingoCardData cardsData = new BingoCardData();
         cardsData.lists().saveTasksFromGroup(listName,
-                getItems().stream().map(item -> BingoTask.fromStack(item).data).toList(),
-                getSelectedItems().stream().map(item -> BingoTask.fromStack(item).data).toList());
+                getItems().stream().map(item -> BingoTask.fromStack(item).data).collect(Collectors.toList()),
+                getSelectedItems().stream().map(item -> BingoTask.fromStack(item).data).collect(Collectors.toList()));
     }
 
     public static List<MenuItem> asPickerItems(List<BingoTask> tasks) {
